--- a/_templates/page.html
+++ b/_templates/page.html
@@ -8,6 +8,13 @@
 <meta name="citation_publication_date" content="2012/08/21"/>
 <meta name="citation_pdf_url" content="http://mae.ucdavis.edu/~biosport/jkm/dissertation/HumanControlofaBicycle.pdf"/>
 <script type="text/javascript" src="http://localhost:8000/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+<style>
+
+    body { 
+        min-width:200px;
+    }
+</style>
 {% endblock %}
 
 {% block body %}
