some doublets stuff

--- a/_templates/page.html
+++ b/_templates/page.html
@@ -10,9 +10,18 @@
 <script type="text/javascript" src="http://localhost:8000/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <style>
-
     body { 
         min-width:200px;
+    }
+
+    .figure img {
+        max-width:90%;
+        margin:auto;
+    }
+
+    .figure{
+        margin-left: 5%;
+        margin-right: 5%;
     }
 </style>
 {% endblock %}
