--- a/_templates/page.html
+++ b/_templates/page.html
@@ -12,6 +12,8 @@
 <style>
     body { 
         min-width:200px;
+        font-family: Bitter, Georgia, 'Times New Roman', serif;
+        font-size: 15px;
     }
 
     .figure img {
@@ -22,6 +24,30 @@
     .figure{
         margin-left: 5%;
         margin-right: 5%;
+    }
+
+    h1 + p:first-letter,
+    h2 + p:first-letter,
+    h3 + p:first-letter
+    { 
+        float: left;
+        color: #903;
+        font-size: 65px;
+        line-height: 50px;
+        padding-top: 4px;
+        padding-right: 6px;
+        padding-left: 3px;
+        font-family: Georgia, Serif;
+    }
+
+    p{
+       text-indent:2em;
+       
+    }
+
+    h2+p, h1+p, h3+p {
+       text-indent:inherit;
+       color: inherit;
     }
 </style>
 {% endblock %}
