--- a/_templates/page.html
+++ b/_templates/page.html
@@ -48,7 +48,22 @@
     h2+p, h1+p, h3+p {
        text-indent:inherit;
        color: inherit;
-    }
+   }
+   div.content ul > li {
+background-image:none;
+   list-style-image: none;
+   list-style-position: outside;
+   list-style-type: none;
+   }
+
+   ul {padding-left: 14px; list-style: none;}
+   ul li:before {color: #903; content: "•"; position:relative; 
+       left: -7px; font-size: 18px; margin-left: -7px}
+
+   a:link, a:hover, a:active {
+       text-decoration: underline;
+       color: #903;
+   }
 </style>
 {% endblock %}
 
