--- a/_templates/page.html
+++ b/_templates/page.html
@@ -8,6 +8,7 @@
 <meta name="citation_publication_date" content="2012/08/21"/>
 <meta name="citation_pdf_url" content="http://mae.ucdavis.edu/~biosport/jkm/dissertation/HumanControlofaBicycle.pdf"/>
 <script type="text/javascript" src="http://localhost:8000/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <style>
     body { 
@@ -64,6 +65,36 @@ background-image:none;
        text-decoration: underline;
        color: #903;
    }
+    .figure 
+    {
+        border: solid 2px #903;
+        border-radius:10px;
+        padding: 10px;
+        
+    }
+    .figure > a 
+    {
+        display:block;
+        padding:auto;
+        width:100%;
+        
+    }
+
+    div.figure a > img
+    {
+        display: block;
+        margin:0 auto;
+    }
+
+    .caption{
+        border-left: solid thick #903; 
+        padding-left: 10px;
+        color: gray;
+        width: 80%;
+        margin: 0 10%;
+        margin-top: 30px;
+    }
+
 </style>
 {% endblock %}
 
