--- a/_templates/page.html
+++ b/_templates/page.html
@@ -11,10 +11,38 @@
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <style>
+
+    h1 {
+        font-size:2.0em;
+    }
+    h2 {
+        font-size:1.8em;
+    }
+    h3 {
+        font-size:1.6em;
+    }
+    h4 {
+        font-size:1.4em;
+    }
+    h5 {
+        font-size:1.2em;
+    }
+    h6 {
+        font-size:1.0em;
+    }
+
+
     body { 
         min-width:200px;
         font-family: Bitter, Georgia, 'Times New Roman', serif;
         font-size: 15px;
+    }
+    a.headerlink {
+        color: #903;
+    }
+
+    a.headerlink:hover {
+        color: #903;
     }
 
     .figure img {
