--- a/_templates/page.html
+++ b/_templates/page.html
@@ -123,6 +123,15 @@ background-image:none;
         margin-top: 30px;
     }
 
+    td.label {
+        width:300px;
+        text-align:right;
+    }
+
+    p.caption {
+        text-indent: 0;
+    }
+
 </style>
 {% endblock %}
 
